--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "css-loader": "0.28.4",
     "env": "0.0.2",
     "live-server": "^1.2.1",
+    "moment": "^2.18.1",
     "node-sass": "^4.13.1",
     "normalize.css": "7.0.0",
     "react": "^15.7.0",
+    "react-addons-shallow-compare": "^15.6.0",
+    "react-dates": "^12.7.0",
     "react-dom": "^15.6.1",
     "react-modal": "^2.2.2",
     "react-redux": "^5.0.5",
