--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
     "env": "0.0.2",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "jest": "^20.0.4",
     "live-server": "^1.2.1",
