--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "author": "Atacan Korkmaz",
   "license": "MIT",
   "scripts": {
+    "start": "node server/server.js",
     "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest"
+    "test": "jest",
+    "heroku-postbuild": "npm run build:prod"
   },
   "dependencies": {
     "all": "0.0.0",
