--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@ logs
 **/*.backup.*
 **/*.back.*
 
-./public
+public/bundle.js
+public/bundle.js.map
+public/styles.css
+public/styles.css.map
 node_modules
 bower_components
 
