--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
     "env": "0.0.2",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
+    "firebase": "^8.3.1",
     "jest": "^20.0.4",
     "live-server": "^1.2.1",
     "moment": "^2.18.1",
     "node-sass": "^4.13.1",
     "normalize.css": "7.0.0",
     "numeral": "^2.0.6",
+    "raf": "^3.3.2",
     "react": "^15.7.0",
     "react-addons-shallow-compare": "^15.6.0",
     "react-dates": "^12.7.0",
@@ -40,6 +44,7 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "6.0.6",
     "save": "^2.4.0",
     "style-loader": "0.18.2",
