--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest",
+    "test": "jest --config=jest.config.json",
     "heroku-postbuild": "npm run build:prod"
   },
   "dependencies": {
@@ -26,6 +26,7 @@
     "env": "0.0.2",
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
+    "enzyme-to-json": "^3.6.2",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "firebase": "^8.3.1",
@@ -44,6 +45,7 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
+    "redux-mock-store": "^1.2.3",
     "redux-thunk": "^2.2.0",
     "sass-loader": "6.0.6",
     "save": "^2.4.0",
