--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "firebase": "^8.4.2",
+    "history": "^4.7.2",
     "jest": "^20.0.4",
     "live-server": "^1.2.1",
     "moment": "^2.18.1",
